Refatorando metodos para ficarem mais agradaveis de comrpeender